--- a/src/easyqc/easyqc.ui
+++ b/src/easyqc/easyqc.ui
@@ -378,7 +378,23 @@
     </property>
     <addaction name="actionopen"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <widget class="QMenu" name="menuColormaps">
+     <property name="title">
+      <string>Colormaps</string>
+     </property>
+     <addaction name="actionColormap_CET_L2"/>
+     <addaction name="actionColormap_MPL_PuOr"/>
+     <addaction name="actionColormap_CET_D1"/>
+     <addaction name="actionColormap_CET_D6"/>
+    </widget>
+    <addaction name="menuColormaps"/>
+   </widget>
    <addaction name="menufile"/>
+   <addaction name="menuView"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionopen">
@@ -390,6 +406,26 @@
    </property>
    <property name="visible">
     <bool>true</bool>
+   </property>
+  </action>
+  <action name="actionColormap_CET_L2">
+   <property name="text">
+    <string>Gray (CET-L2)</string>
+   </property>
+  </action>
+  <action name="actionColormap_MPL_PuOr">
+   <property name="text">
+    <string>PuOr</string>
+   </property>
+  </action>
+  <action name="actionColormap_CET_D1">
+   <property name="text">
+    <string>Blue White Red (CET-D1)</string>
+   </property>
+  </action>
+  <action name="actionColormap_CET_D6">
+   <property name="text">
+    <string>Blue Black Red (CET-D6)</string>
    </property>
   </action>
  </widget>
